[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus"
version = "1.0"
description = "olympus"
requires-python = ">=3.11"
dependencies = [
  "cryptography",
  "httpx",
  "oracledb",
  "polars",
  "tzdata"
]

[tool.setuptools]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
