[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charon"
version = "1.0"
description = "charon"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "httpx",
    "oracledb",
    "polars",
    "tzdata",
    "pytest"
]
# The presence of this table is the opt-in marker. With it, charon manages an
# offline venv from vendored wheels. Remove it and charon reverts to plain
# pass-through for this repo (no venv management), exactly like a generic job.
[tool.charon]
managed = true


[project.optional-dependencies]
dev = [
    "pytest>=8.0"
    # "pytest-cov>=5.0"
]

[tool.setuptools]
packages = ["src"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = [".", "lib"]
venvPath = "."  
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = [".", "lib"]
testpaths = ["tests"]
cache_dir = "./tests/pytest_cache"